Harry Kalogirou 	<harkal@rainbow.cs.unipi.gr>	19 Oct 2001
Paul Nasrat		<pnasrat@uk.now.com>		28 Aug 2001
Peter L Vachuska	<pvachusk@nconnect.net>		13 Aug 2001
Riley Williams		<rhw@MemAlpha.cx>		22 Oct 2001
Simon Weijgers		<simon@weijgers.com>		15 Nov 1998
Thomas McWilliams	<tgm9999@yahoo.com>		 2 Apr 2001

------------------------------------------------------------------------------

Mon Oct 22 02:06:53 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Fixed typos in recent CHANGELOG entries.
	* Thanks are due to HarKal for sorting out the bug in the Makefiles
	  that I was unable to track down.

Fri Oct 19 11:35:00 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* THIS IS ELKS RELEASE 0.0.87.
	* Final changes for the release.

Thu Oct 18 17:32:06 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fixed make dist. It was stopping with error trying to create the
	  arch/i86 directory twice.
	* Fixed `make dist` to include keymap headers in the distribution.
	* Fixed `make dist` to include the net/ipv4 directory in the
	  distribution.

Thu Oct 18 16:53:02 EEST 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Fix in makefiles. The `make dep` command needs version.h and
	  compile.h to work.
	* Fixed arch/i86/mm/Makefile to make the tree compilable.

Wed Oct 17 11:32:57 CEST 2001	Arnaud Launay <asl@launay.org>

	* Updated my current email address.

Tue Oct 16 21:59:27 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted ELKS_VERSION_CODE to reflect the actual use made of
	  the PRE's as being BEFORE the non-PRE version rather than after
	  as was previously assumed. Also allowed up to 255 PRE's between
	  PATCHLEVEL increments.
	* Bumped version to 0.0.87-pre1 in case anything is using the
	  above field.

Tue Oct  9 16:03:21 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Reformatted CHANGELOG to make it easier to find contributor's
	  current email addresses.
	* Created list of standard Makefile rules where all rules perform